fixed major issues with unicode

--- a/tests/compra.html
+++ b/tests/compra.html
@@ -771,7 +771,7 @@ dxo.InlineInitialize();
            <td class="adquisicionCrearTdGris">
               <strong>Número :</strong>&nbsp;<span id="ctl00_ContentPlaceHolder1_crtlFichaAdq_ctrlEncabezado_lblNumero">2012-0-01-0-08-CM-002791</span>
               <br/>
-              <strong>Descripción :</strong>&nbsp;<span id="ctl00_ContentPlaceHolder1_crtlFichaAdq_ctrlEncabezado_lblDescripcion">SERVICIO DE ARBITRAJE EN LIGA DE BOLA SUAVE.</span>
+              <strong>Descripción :</strong>&nbsp;<span id="ctl00_ContentPlaceHolder1_crtlFichaAdq_ctrlEncabezado_lblDescripcion">SERVICIO DE ARBITRAJE EN LIGA DE BOLA SUAVE. solución</span>
               <br />
               <strong>Objeto de la Contratación :</strong>&nbsp;<span id="ctl00_ContentPlaceHolder1_crtlFichaAdq_ctrlEncabezado_lblObjetoContratacion">Servicio</span>
               <br/>
