--- a/analysis.html
+++ b/analysis.html
@@ -192,8 +192,11 @@ hr {
 <body>
 <h1>Gasto Mensual de Licitaciones Publicas en Panamá</h1>
 
-<p>Utilizando la data de panadata.net se puede hacer un analisis del gasto mensual por año en licitaciones publicas.
-Solo se cuenta con la data del 2012, 2013 y 2014.</p>
+<p>Este proyecto se ha dedicado a extraer data de la pagina <a href="http://www.panamacompra.gob.pa">www.panamacompra.gob.pa</a> desde hace abril 2013.
+La data se almacena en <a href="http://panadata.net">panadata.net</a>. Este sitio cuenta con una herramienta de busqueda.</p>
+
+<p>Los datos y graficas de este analisis fueron confeccionados con <a href="http://static.panadata.net/licitaciones.csv">la data en formato csv</a> de panadata.net
+Solo se cuenta con la data del 2012, 2013 y 2014. Ya que antes de esto el gobierno usaba otro sistema.</p>
 
 <h2>Cargar archivo y procesar data</h2>
 
