--- a/analysis.html
+++ b/analysis.html
@@ -192,7 +192,7 @@ hr {
 <body>
 <h1>Gasto Mensual de Licitaciones Publicas en Panamá</h1>
 
-<p>Este proyecto se ha dedicado a extraer data de la pagina <a href="http://www.panamacompra.gob.pa">www.panamacompra.gob.pa</a> desde hace abril 2013.
+<p>Este proyecto se ha dedicado a extraer data de la pagina <a href="http://www.panamacompra.gob.pa">www.panamacompra.gob.pa</a> desde abril 2013.
 La data se almacena en <a href="http://panadata.net">panadata.net</a>. Este sitio cuenta con una herramienta de busqueda.</p>
 
 <p>Los datos y graficas de este analisis fueron confeccionados con <a href="http://static.panadata.net/licitaciones.csv">la data en formato csv</a> de panadata.net
